--- a/After Class Projects/Get Familiar With Structure/Index.html
+++ b/After Class Projects/Get Familiar With Structure/Index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title>
-            My first web page
+        <title> 
+            My first atttempt at Web Development!
         </title>
-    </head>
-    <body>
-<h1>My first web page</h1>
-<h2>What I Learned?</h2>\
+        </head>
+    <body> 
+<h1>My first atttempt at Web Development!</h1>
+<h2>What I Learned?</h2>
 <h2>What is HTML?</h2>
 <p>HTML (HyperText Markup Language) is the language used to structure and display content on the web. It uses tags to
 organize text, images, links, and other elements. </p>
@@ -28,7 +28,5 @@ main heading, a few lines of text, and a link to another webpage.</p>
 
 <b>Save and View in Browser:</b>
 <p>After saving your file, open it in a web browser to view how it looks.</p>
-
-
    </body> 
 </html>
